--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ test = [
     "jinja2",
 ]
 
+[project.scripts]
+pack-manager = "cmsis_pack_manager.pack_manager:main"
+
 [project.urls]
 Documentation = "https://github.com/pyocd/cmsis-pack-manager/"
 "Bug Tracker" = "https://github.com/pyocd/cmsis-pack-manager/issues"
