--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -19,12 +19,13 @@ log = "0.4.8"
 minidom = "0.12.0"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["macros", "rt"] }
-reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls-native-roots", "trust-dns", "stream"] }
+tokio = { version = "1.0", features = ["macros", "rt"], optional = true }
+reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls-native-roots", "trust-dns", "stream"], optional = true }
 anyhow = "1.0.56"
 
 [dev-dependencies]
 time = "0.3.3"
 
 [features]
-default = []
+default = ["pack-download"]
+pack-download = ["dep:tokio", "dep:reqwest"]
