--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "cmsis-pack"
 version = "0.6.3"
-authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
-           "Chris Reed <flit@me.com>",
-           "Mathias Brossard <mathias.brossard@arm.com>"]
+authors = [
+    "Jimmy Brisson <theotherjimmy@gmail.com>",
+    "Chris Reed <flit@me.com>",
+    "Mathias Brossard <mathias.brossard@arm.com>",
+]
 repository = "https://github.com/pyocd/cmsis-pack-manager"
 description = "Rust crate for managing CMSIS Packs"
 license = "Apache-2.0"
@@ -20,7 +22,11 @@ minidom = "0.12.0"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt"] }
-reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls-native-roots", "trust-dns", "stream"] }
+reqwest = { version = "0.12.0", default_features = false, features = [
+    "rustls-tls-native-roots",
+    "trust-dns",
+    "stream",
+] }
 anyhow = "1.0.56"
 
 [dev-dependencies]
