--- a/.github/workflows/ci-build-wheel-linux.yml
+++ b/.github/workflows/ci-build-wheel-linux.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: artifact-ubuntu
           path: ./wheelhouse/*.whl
