--- a/.github/workflows/ci-build-wheel-macos.yml
+++ b/.github/workflows/ci-build-wheel-macos.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: artifact-macos
           path: ./wheelhouse/*.whl
