--- a/.github/workflows/ci-build-wheel-windows.yml
+++ b/.github/workflows/ci-build-wheel-windows.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: artifact-windows
           path: ./wheelhouse/*.whl
