--- a/.github/workflows/ci-build-wheel.yml
+++ b/.github/workflows/ci-build-wheel.yml
@@ -59,9 +59,9 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   linux-armv6:
@@ -92,9 +92,9 @@ jobs:
           pip3 install maturin cffi
           maturin build --release --target arm-unknown-linux-gnueabihf --out wheelhouse
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-linux-armv6
           path: ./wheelhouse/*.whl
 
   linux-armv7:
@@ -125,9 +125,9 @@ jobs:
           pip3 install maturin cffi
           maturin build --release --target armv7-unknown-linux-gnueabihf --out wheelhouse
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-linux-armv7
           path: ./wheelhouse/*.whl
 
   linux-aarch64:
@@ -158,9 +158,9 @@ jobs:
           pip3 install maturin cffi
           maturin build --release --target aarch64-unknown-linux-gnu --out wheelhouse
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-linux-aarch64
           path: ./wheelhouse/*.whl
 
   test-cross:
@@ -181,10 +181,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: wheels
           path: ./wheelhouse
+          pattern: wheels-*
+          merge-multiple: true
       - uses: uraimo/run-on-arch-action@v2.7.1
         name: Install built wheel
         with:
