--- a/.github/workflows/ci-build-wheel-macos.yml
+++ b/.github/workflows/ci-build-wheel-macos.yml
@@ -7,12 +7,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-13]
     env:
-      CIBW_ARCHS_MACOS: x86_64 universal2
+      CIBW_ARCHS_MACOS: universal2
       CIBW_BUILD: "cp39-*"
       CIBW_ENVIRONMENT: 'PATH="$PATH:/usr/share/rust/.cargo/bin:$HOME/.cargo/bin"'
       CIBW_BUILD_VERBOSITY: 1
+      MACOSX_DEPLOYMENT_TARGET: 10.12
 
     steps:
       - uses: actions/checkout@v4
@@ -25,8 +26,10 @@ jobs:
           toolchain: 1.67.0
           profile: minimal
 
-      - name: Install Rust aarch64-apple-darwin target
-        run: rustup target add aarch64-apple-darwin
+      - name: Install Rust *-apple-darwin targets
+        run: |
+          rustup target add aarch64-apple-darwin
+          rustup target add x86_64-apple-darwin
 
       - uses: actions/setup-python@v4
         name: Install Python
