--- a/rust/cmsis-pack/Cargo.toml
+++ b/rust/cmsis-pack/Cargo.toml
@@ -18,11 +18,11 @@ edition = "2018"
 bytes = "1.0"
 futures = "0.3.8"
 log = "0.4.8"
-minidom = "0.12.0"
+roxmltree = "0.20.0"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt"] }
-reqwest = { version = "0.12.0", default_features = false, features = [
+reqwest = { version = "0.12.0", default-features = false, features = [
     "rustls-tls-native-roots",
     "trust-dns",
     "stream",
