--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
 repository = "https://github.com/pyocd/cmsis-pack-manager"
 description = "Foreign Function Interface for cmsis-pack"
 license = "Apache-2.0"
-edition = "2018"
+edition = "2021"
 readme = "README.md"
+rust-version = "1.71"
 
 [lib]
 name = "cmsis_pack_manager"
