--- a/rust/cmsis-cli/Cargo.toml
+++ b/rust/cmsis-cli/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
 repository = "https://github.com/pyocd/cmsis-pack-manager"
 description = "Simple command line interface for CMSIS Pack management"
 license = "Apache-2.0"
-edition = "2018"
+edition = "2021"
+rust-version = "1.71"
 
 [lib]
 name = "cmsis_cli"
