--- a/.github/workflows/ci-build-wheel.yml
+++ b/.github/workflows/ci-build-wheel.yml
@@ -23,7 +23,7 @@ jobs:
       CIBW_BUILD: "cp39-*"
       CIBW_SKIP: "cp39-musl*"
       CIBW_BEFORE_ALL_LINUX: >
-        yum install -y libffi-devel openssl-devel &&
+        yum install -y libffi-devel openssl-devel libatomic &&
         curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain 1.71.1 --profile=minimal -y &&
         rustup show &&
         cargo install empty-library || true
