--- a/.github/workflows/ci-build-wheel.yml
+++ b/.github/workflows/ci-build-wheel.yml
@@ -36,11 +36,9 @@ jobs:
           fetch-depth: 0
 
       - name: Install Rust
-        if: runner.os != 'Linux'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.71.1
-          profile: minimal
+        run: |
+          rustup toolchain install --profile minimal 1.71.1
+          rustup default 1.71.1
 
       - name: Install Rust *-apple-darwin targets
         if: runner.os == 'macOS'
@@ -48,11 +46,11 @@ jobs:
           rustup target add aarch64-apple-darwin
           rustup target add x86_64-apple-darwin
 
-      # - name: Set up QEMU
-      #   if: runner.os == 'Linux'
-      #   uses: docker/setup-qemu-action@v2
-      #   with:
-      #     platforms: arm64,arm
+      - name: Install Rust *-pc-windows-msvc targets
+        if: runner.os == 'Windows'
+        run: |
+          rustup target add x86_64-pc-windows-msvc
+          rustup target add i686-pc-windows-msvc
 
       - uses: actions/setup-python@v4
         name: Install Python
@@ -77,13 +75,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.71.1
-          profile: minimal
-          target: arm-unknown-linux-gnueabihf
-          default: true
+      - name: Install Rust
+        run: |
+          rustup toolchain install --profile minimal -t arm-unknown-linux-gnueabihf 1.71.1
+          rustup default 1.71.1
       - name: Install cross toolchain and build
         run: |
           brew tap messense/macos-cross-toolchains
@@ -110,13 +105,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.71.1
-          profile: minimal
-          target: armv7-unknown-linux-gnueabihf
-          default: true
+      - name: Install Rust
+        run: |
+          rustup toolchain install --profile minimal -t armv7-unknown-linux-gnueabihf 1.71.1
+          rustup default 1.71.1
       - name: Install cross toolchain and build
         run: |
           brew tap messense/macos-cross-toolchains
@@ -143,13 +135,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.71.1
-          profile: minimal
-          target: aarch64-unknown-linux-gnu
-          default: true
+      - name: Install Rust
+        run: |
+          rustup toolchain install --profile minimal -t aarch64-unknown-linux-gnu 1.71.1
+          rustup default 1.71.1
       - name: Install cross toolchain and build
         run: |
           brew tap messense/macos-cross-toolchains
