--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 
 jobs:
   linux:
@@ -30,10 +33,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-py${{ matrix.python-version }}-
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust-version }}
-          profile: minimal
+        run: |
+          rustup toolchain install --profile minimal ${{ matrix.rust-version }}
       - name: Install dependencies
         run: |
           rustup default ${{ matrix.rust-version }}
